# CPU-Monitor-Docklet

./: .gitignore  CMakeLists.txt  README.md
data/: CPUInfo.desktop  com.dreamdevel.cpu-monitor-docklet.desktop  com.dreamdevel.cpuinfo.desktop
debian/: changelog  control  copyright
po/: CMakeLists.txt
src/: Application.vala  DockApplication.vala  config.vala.cmake  main.vala
src/Core/: SensorsEngine.vala
src/Models/: CPU.vala
tools/: dev-shell  install-deps  install-deps-ubuntu
vapis/: sensors.vapi
